# frenet-trajectory-optimization

./: CMakeLists.txt  README.md
config/: config.json
include/: CubicSpline.h  FrenetOptimalPlanner.h  FrenetOptimization.h  PolynomialTraj.h  PolynomialTraj_old.h  SafetyChecking.h  Spline.h  Utilities.h  VehicleModel.h
python/FrenetOptimalTrajectory/: frenet_optimal_trajectory.py
scripts/: CMakeLists.txt  RunFrenetOptimalTrajectory.cpp  TestCubicSpline.cpp  TestPolynomial.cpp
src/: CubicSpline.cpp  FrenetOptimalPlanner.cpp  FrenetOptimization.cpp  PolynomialTraj.cpp  PolynomialTraj_old.cpp  Safety.cpp  Spline.cpp  Utilities.cpp
